--- a/_posts/2024-02-12-sri-lanka-nov-2023/sri-lanka-nov-2023.html
+++ b/_posts/2024-02-12-sri-lanka-nov-2023/sri-lanka-nov-2023.html
@@ -113,12 +113,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","preview"]}},"value":[{"type":"character","attributes":{},"value":["Sri Lanka Nov 2023"]},{"type":"character","attributes":{},"value":["A brief post on my casual trip to Sri Lanka.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Nicholas"]}]}]},{"type":"character","attributes":{},"value":["2024-02-12"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc","toc_float","toc_depth"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]}]}]},{"type":"character","attributes":{},"value":["img/idea.jpg"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","preview"]}},"value":[{"type":"character","attributes":{},"value":["Sri Lanka Nov 2023"]},{"type":"character","attributes":{},"value":["A brief post on my casual trip to Sri Lanka.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Nicholas"]}]}]},{"type":"character","attributes":{},"value":["2024-02-12"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc","toc_float","toc_depth"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[3]}]}]},{"type":"character","attributes":{},"value":["img/idea.JPG"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["img/crose.jpg","img/flat.jpg","img/idea.jpg","img/leo.jpg","img/lethe.jpg","img/mpuzzle.jpg","img/tig.jpg","sri-lanka-nov-2023_files/anchor-4.2.2/anchor.min.js","sri-lanka-nov-2023_files/bowser-1.9.3/bowser.min.js","sri-lanka-nov-2023_files/distill-2.2.21/template.v2.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.min.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.min.map","sri-lanka-nov-2023_files/popper-2.6.0/popper.min.js","sri-lanka-nov-2023_files/tippy-6.2.7/tippy-bundle.umd.min.js","sri-lanka-nov-2023_files/tippy-6.2.7/tippy-light-border.css","sri-lanka-nov-2023_files/tippy-6.2.7/tippy.css","sri-lanka-nov-2023_files/tippy-6.2.7/tippy.umd.min.js","sri-lanka-nov-2023_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["img/crose.JPG","img/flat.JPG","img/idea.JPG","img/leo.JPG","img/lethe.JPG","img/mpuzzle.JPG","img/tig.JPG","sri-lanka-nov-2023_files/anchor-4.2.2/anchor.min.js","sri-lanka-nov-2023_files/bowser-1.9.3/bowser.min.js","sri-lanka-nov-2023_files/distill-2.2.21/template.v2.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.min.js","sri-lanka-nov-2023_files/jquery-3.6.0/jquery-3.6.0.min.map","sri-lanka-nov-2023_files/popper-2.6.0/popper.min.js","sri-lanka-nov-2023_files/tippy-6.2.7/tippy-bundle.umd.min.js","sri-lanka-nov-2023_files/tippy-6.2.7/tippy-light-border.css","sri-lanka-nov-2023_files/tippy-6.2.7/tippy.css","sri-lanka-nov-2023_files/tippy-6.2.7/tippy.umd.min.js","sri-lanka-nov-2023_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1552,31 +1552,31 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>In terms of butterflying, the forest was very quiet with some Clippers, a Commander and a Metallic Caerulean. The vertebrates were more interesting and we saw the endemic Kangaroo Lizard, Hump-nosed Lizard, whip snake and viper. For birds, we got the Spot-winged Thrush as the highlight. Based on some other reviews, the northern entrance might be better for wildlife. Overall, very quiet but it was worth it to see my mother get leeched.</p>
 <p>After the guided walk, I had some time to explore the area near the entrance and village which was decent. The endemic <em>Eurema cf. ormistoni</em> and <em>Celaenorrhinus spilothyrus</em> were both shot there. Other butterflies include the Angled Pierrot (<em>Caleta decida</em>) and the White Four Ring (<em>Ypthima ceylonica</em>).</p>
 <figure>
-<img src="img/flat.jpg?display=inline-block" alt="" /><figcaption>Celaenorrhinus spilothyrus, the Sri Lankan Black Flat was spotted along the path to the park entrance.</figcaption>
+<img src="img/flat.JPG" alt="" /><figcaption>Celaenorrhinus spilothyrus, the Sri Lankan Black Flat was spotted along the path to the park entrance.</figcaption>
 </figure>
 <p>The next morning, we went for a guided walk around the village for birds and managed to get a few endemics. But the main site of interest was the accommodations which had a flowering Elaeocarpus sp. It attracted many Common Jezebels (<em>Delias eucharis</em>) and two endemic Ceylon Tree Nymphs (<em>Idea iasonia</em>). The rest of the gardens attracted some tigers (<em>Ideopsis</em> and <em>Parantica</em>) as well as the Blue Mormon (now a subsp. of <em>Papilio agenor</em>).</p>
 <figure>
-<img src="img/idea.jpg" alt="" /><figcaption>A Ceylon Tree nymph resting! One of my targets.</figcaption>
+<img src="img/idea.JPG" alt="" /><figcaption>A Ceylon Tree nymph resting! One of my targets.</figcaption>
 </figure>
 <h3 id="yala-national-park-block-1">Yala National Park Block 1</h3>
 <p>We did a full-day safari at Yala Block 1 to maximise our chances of seeing a Leopard. It costed us ~150USD for the tour and another 30USD for the entrance fee. For the full day safari, it runs from about 5am - 6pm. 12-2pm is a no move time where the drivers are not allowed to move. Unfortunately, our Hilux got stuck at 11am and another vehicle could only help to pull us out at ~3pm. This gave me around some time to walk near the vehicle to look for butterflies which happened to be the most butterfly productive part of the day. The Pieridids were puddling around the trail, consisting of <em>Appias sp</em> (unsure if they were <em>albina</em> or the endemic <em>galene</em>), <em>Ixias</em> and <em>Euremas</em> etc. Highlights were the Monkey Puzzle (<em>Rathinda amor</em>), Small Salmon Arab (<em>Colotis amata</em>), White Orange Tip (<em>Ixias marianne</em>) and a Dark Wanderer (<em>Pareronia ceylanica</em>). None of these are supposed to be rare but they were all lifers for me. The Crimson (<em>Pachliopta hector</em>) was also common along the trails. Once we were rescued, the focus was again on birds.</p>
 <figure>
-<img src="img/mpuzzle.jpg" alt="" /><figcaption>The Monkey Puzzle! A very interesting lookign Theclinae.</figcaption>
+<img src="img/mpuzzle.JPG" alt="" /><figcaption>The Monkey Puzzle! A very interesting lookign Theclinae.</figcaption>
 </figure>
 <figure>
-<img src="img/crose.jpg" alt="" /><figcaption>Crimson Rose. A common butterfly seen many times flying along the trails in Yala NP and even 1km out over the ocean.</figcaption>
+<img src="img/crose.JPG" alt="" /><figcaption>Crimson Rose. A common butterfly seen many times flying along the trails in Yala NP and even 1km out over the ocean.</figcaption>
 </figure>
 <p>Oh and a leopard right before closing time. It was a mad rush getting to the location and out of the park by 6pm.</p>
 <figure>
-<img src="img/leo.jpg" alt="" /><figcaption>Leopard.</figcaption>
+<img src="img/leo.JPG" alt="" /><figcaption>Leopard.</figcaption>
 </figure>
 <h3 id="nuwara-eliya">Nuwara Eliya</h3>
 <p>The main site was Horton Plains National Park (~2100m ASL). The 30USD entrance fee was worth it for the views and landscape alone. We did the standard loop around World’s End trail which took a few hours. The butterfly diversity was expectedly low but I managed to get the endemic Ceylon Tiger (<em>Parantica taprobana</em>) and a suspected <em>Lethe cf. daretis</em>. The Lethe was a bit too worn though. The other butterflies were not very confiding.</p>
 <figure>
-<img src="img/tig.jpg" alt="" /><figcaption>The endemic Ceylon Tiger. Seems to be restricted to the highlands.</figcaption>
+<img src="img/tig.JPG" alt="" /><figcaption>The endemic Ceylon Tiger. Seems to be restricted to the highlands.</figcaption>
 </figure>
 <figure>
-<img src="img/lethe.jpg" alt="" /><figcaption>The worn Lethe that I think is a daretis.</figcaption>
+<img src="img/lethe.JPG" alt="" /><figcaption>The worn Lethe that I think is a daretis.</figcaption>
 </figure>
 <h3 id="overall">Overall</h3>
 <p>The butterfly diversity on this trip was not very high at all with around 55 species over 10 days. At least I managed to get a few of my targets and endemics such as the Ceylon Tree Nymph and Monkey Puzzle. But overall, it was a pretty enjoyable trip. It was not a very cheap place though.</p>
